WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233457
[IFC][Integration] RenderQuote is not a RenderText
https://bugs.webkit.org/show_bug.cgi?id=233457
Summary
[IFC][Integration] RenderQuote is not a RenderText
alan
Reported
2021-11-23 20:48:59 PST
since
r162972
Attachments
Patch
(3.75 KB, patch)
2021-11-23 21:08 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-11-23 21:08:32 PST
Created
attachment 445060
[details]
Patch
EWS
Comment 2
2021-11-24 06:14:35 PST
Committed
r286147
(
244531@main
): <
https://commits.webkit.org/244531@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445060
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-24 06:15:22 PST
<
rdar://problem/85727011
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug