[IFC][Integration] RenderQuote is not a RenderText https://bugs.webkit.org/show_bug.cgi?id=233457

Reviewed by Antti Koivisto.

It's a RenderInline since r162972.

* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForFontAndText):
(WebCore::LayoutIntegration::canUseForRenderInlineChild):



Canonical link: https://commits.webkit.org/244531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286147 268f45cc-cd09-0410-ab3c-d52691b4dbfc