Source/WebCore/layout/integration/LayoutIntegrationCoverage.h
@@ -75,7 +75,7 @@ enum class AvoidanceReason : uint64_t {
     // Unused                                    = 1LLU  << 34,
     FlowTextIsCombineText                        = 1LLU  << 35,
     FlowTextIsRenderCounter                      = 1LLU  << 36,
-    FlowTextIsRenderQuote                        = 1LLU  << 37,
+    ContentIsRenderQuote                         = 1LLU  << 37,
     FlowTextIsTextFragment                       = 1LLU  << 38,
     FlowTextIsSVGInlineText                      = 1LLU  << 39,
     FlowHasComplexFontCodePath                   = 1LLU  << 40,
